syntax = "proto3";

import "message/Vec2.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.model";
option java_outer_classname = "PlayerProto";

message PlayerRpcDto {
  Vec2Dto position = 1;
}
