syntax = "proto3";

import "google/protobuf/empty.proto";
import "message/Player.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.player";
option java_outer_classname = "PlayerAccessorProto";

service PlayerAccessorService {
  rpc GetMe (google.protobuf.Empty) returns (PlayerRpcDto);
}
